tests/fixtures/invalid/pow_int_str_set.py
# Cannot call pow() with Int, Str, Set[int]
x = pow(1, "hello", {1, 2, 3})
